--- a/main.css
+++ b/main.css
@@ -55,26 +55,31 @@ p.noCanvasMsg
 	color: white;
 }
 
-#page2
+#theWheelContainer
 {
-    text-align:center;
-    background-image: url(wheel_back.80.png);
+    background-image: url(wheel_back.60.png);
     background-repeat: no-repeat;
     background-position:center;
-    width: 350px;
-    height: 460px;
+    /*width: 260px;
+    height: 260px;*/
+    padding-top:88px;
 }
 
 canvas
 {
-    padding-top:60px;
+    /*margin-top:-40px;*/
 }
 
 #page2 a
 {
+    padding-top:40px;
     text-decoration: none;
     display:block;
-    padding-top:60px;
-    font-weight: bold;
+    /*height:40px;
+    width:70px;
     color:chartreuse;
+    margin:0 auto;*/
+    font-weight: bold;
+    cursor:pointer;
+    
 }
